Fix typo. Sort tickets. Show the newest on the top.

--- a/src/app/protected/cephalix/institutes/lists/institutes.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes.component.html
@@ -73,7 +73,7 @@
   <ion-list >
     <ion-item *ngIf="rowData.length == 0">
       <ion-label>
-        {{ 'Loading datas ...' | translate }}
+        {{ 'Loading data ...' | translate }}
       </ion-label>
     </ion-item>
     <ion-item-sliding *ngFor="let object of rowData">
