--- a/src/app/protected/cephalix/tickets/tickets.page.html
+++ b/src/app/protected/cephalix/tickets/tickets.page.html
@@ -46,7 +46,7 @@
   </ion-searchbar>
   <ion-item *ngIf="rowData.length == 0">
     <ion-label class="ion-text-center">
-      {{ 'Loading datas ...' | translate }}
+      {{ 'Loading data ...' | translate }}
     </ion-label>
   </ion-item>
   <ion-list>
